@@ -1,3 +1,10 @@
+2003-03-19  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* internal.h (internal_extra_pe_aouthdr): Add Magic,
+	MajorLinkerVersion, MinorLinkerVersion, SizeOfCode,
+	SizeOfInitializedData, SizeOfUninitializedData,
+	AddressOfEntryPoint, BaseOfCode and BaseOfData.
+
 2006-12-05  Michael Tautschnig  <tautschn@model.in.tum.de>
 	    Nick Clifton  <nickc@redhat.com>
 
